// file: proto/gcommon/v1/metrics/v1/provider_config.proto
// version: 1.0.0
// guid: 3539da64-8631-416f-8d05-17a4810ed876

edition = "2023";

package gcommon.v1.metrics;

import "gcommon/v1/common/metrics_provider_type.proto";
import "gcommon/v1/common/organization_resource_limits.proto";
import "gcommon/v1/metrics/export_config.proto";
import "gcommon/v1/metrics/provider_settings.proto";
import "gcommon/v1/metrics/security_config.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/metrics";

message ProviderConfig {
  // Unique identifier for the provider
  string provider_id = 1;

  // Human-readable name for the provider
  string name = 2;

  // Type of provider (prometheus, opentelemetry, custom, etc.)
  gcommon.v1.common.MetricsProviderType type = 3;

  // Provider-specific configuration
  ProviderSettings settings = 4;

  // Export configuration for this provider
  ExportConfig export_config = 5;

  // Resource limits imposed by the organization
  gcommon.v1.common.OrganizationResourceLimits resource_limits = 6;

  // Security configuration
  MetricsSecurityConfig security_config = 7;

  // Tags for provider organization
  map<string, string> tags = 8;

  // Description of the provider
  string description = 9;
}
